# espra

./: .ai-rules.md  .gitignore  AUTHORS.xon  CLAUDE.md  Cargo.toml  Makefile  README.md  THIRDPARTY.xon  UNLICENSE.md  build.zig  build.zig.zon  go.mod  rustfmt.toml
cmd/alphafmt/: README.md  alphafmt.go
lib/ai/: ai.zig
lib/appframe/: appframe.zig  backend.zig  keyboard.zig
lib/bench/: bench.zig
lib/cli/: cli.zig
lib/ident/: ident.zig
lib/string/: string.zig
lib/sys/: locale_info.zig  sys.zig  sys_windows.zig
lib/time/: time.zig
lib/xxh3/: xxh3.zig
pkg/osexit/: osexit.go  osexit_test.go
pkg/xon/: README.md  parse.tests  xon_test.go
tool/: clone_repo.py  common.py  gen_sys_locale_info.py  gen_time_tzdata.py
