[workspace]
members = ["cmd/*", "lib/*"]
resolver = "3"

[workspace.package]
authors = ["tav <tav@espra.com>"]
edition = "2024"
exclude = []
homepage = "https://espra.com"
include = ["README.md", "**/*.rs"]
repository = "https://github.com/espra/espra"
license = "Apache-2.0"
rust-version = "1.87"

[workspace.dependencies]
# Internal crates
cli = { package = "espra-cli", path = "lib/cli" }
log = { package = "espra-log", path = "lib/log" }

# External crates
syn = "=2.0.101"
